# obrew-studio-server

./: .env.example  .eslintrc.json  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  download_and_extract.cmake  inno-setup-config-Windows-Github.iss  inno-setup-config-github.iss  inno-setup-config.iss  package.json  py-to-exe-config.dev.json  py-to-exe-config.github.json  py-to-exe-config.prod.json  requirements.release.txt  requirements.txt
.github/workflows/: llama-binary.yml  release.yml
assets/: LLAMA-INDEX-REFACTOR-PLAN.md  _old_build-steps.md  api-docs.md  build-steps.md  built-in-tools.md  bundling-for-release.md  compiling-packaging.md  deploy.md  faq.md  getting-started.md  how-to-connect-apps.md  how-to-use.md  inference-architecture.md  llama.md  quick-start.md  search-api.md  ssl-certificates-implementation.md
backends/: api_server.py  main.py  updater.py
backends/core/: certificate_manager.py  classes.py  common.py  document.py  download_manager.py
backends/downloads/: __init__.py  route.py
backends/embeddings/: chunking.py  embedder.py  embedder_model.py  evaluation.py  file_loaders.py  file_parsers.py  gguf_embedder.py  gguf_embedder_server.py  main.py  query.py  rag_response_synthesis.py  response_synthesis.py  route.py  storage.py  text_splitters.py  vector_storage.py
backends/inference/: _old_route.py  agent.py  classes.py  helpers.py  llama_cpp.py  llama_cpp_server.py  llama_cpp_vision.py  llama_server.py  route.py  text_llama_cpp_server.py  text_llama_index.py
backends/inference/grammars/: json_arr.gbnf
backends/retrieval/: agentic_search.py  rag.py  search_agent.py  simple_rag.py  test_PLAN-human-in-the-loop-search.md  test_agentic_request.json  test_load_model.json  test_prompts.md
backends/search/: base.py  classes.py  harness.py  route.py  search_agent.py  search_fs.py  test_PLAN-human-in-the-loop-search.md  test_prompts.md  test_search-fs_request.json
backends/search/providers/: __init__.py  email.py  filesystem.py  sharepoint.py  structured.py  vector.py  web.py
backends/search/tests/: test_load_model.json  test_load_text_model.json  test_load_vision_model.json  test_prompts.md  test_search-fs_request.json  test_search-structured_request.json  test_search-vector_discovery_request.json  test_search-vector_image_request.json  test_search-vector_request.json  test_search-web_request.json
backends/services/: route.py
backends/storage/: classes.py  route.py
backends/tools/: _item_utils.py  classes.py  helpers.py  main.py  tool.py
backends/tools/built-in/: calculator.py  retrieval.py
backends/tools/built_in_functions/: __init__.py  agent_ask.py  agent_choices.py  agent_choose.py  agent_chooser.py  agent_file.py  agent_judge.py  agent_plan.py  agent_render_widget.py  agent_respond.py  agent_search.py  agent_task.py  agent_todo.py  analyze_email.py  chat_insights.py  data_transform.py  email_grep.py  email_preview.py  email_read.py  email_scan.py  email_utils.py  enhance-text.py  enhance_text.py  extract_array_of_strings.py  extract_boolean.py  extract_json.py  extract_number.py  extract_object.py  extract_string.py  file_glob.py  file_grep.py  file_parse.py  file_preview.py  file_read.py  file_scan.py  get_functions.py  item_grep.py  item_preview.py  item_query.py  item_read.py  (+18 more)
backends/tts/: classes.py  helpers.py  route.py  tts_engine.py
backends/ui/: CLAUDE.md  api_ui.py  view.py
backends/ui/public/: cert.pem  global.css  global.js  index.html  init.js  key.pem  loading.html  loading.js  main.css  main.html  main.js
backends/vision/: depra_llama_cpp_vision.py  embedding_server.py  image_embedder.py  llama_cpp_vision.py  route.py
bundled/: README.md
certs/: download-mkcert.sh  download_and_extract.cmake  generate-fallback-certs.sh  install_certificates_macos.sh  postinstall.sh
cmake/: download_and_extract.cmake  install_certificates_macos.sh
public/: embedding_model_configs.json  prompt_formats.json  refine_templates.json  retrieval_templates.json  text_model_configs.json  vision_embedding_model_configs.json
scripts/: build-macos-app-bundle.sh  download-mkcert.sh  generate-fallback-certs.sh  package-macos.sh
